update to northwestern

--- a/etc.html
+++ b/etc.html
@@ -172,8 +172,7 @@
 I love designing websites like this one (built using mdbook), <a href="https://github.com/apurvnakade/HugoTheme">my blog's theme</a>
 (built for Hugo), and the <a href="http://www.math.jhu.edu/drp.html">JHU DRP website</a>. I also love to write in my <a href="./blog">personal blog</a>
 and my <a href="https://notleftasanexercise.wordpress.com/">blog about teaching</a>.
-I bake a lot and am an avid yoga practitioner.
-I'm a huge organizational nerd and a big fan of org-mode.
+I'm a huge organizational nerd and an avid yoga practitioner with a keen interest in meditation.
 In a past life, I was involved with the following:</p>
 <h3 id="london-ontario"><a class="header" href="#london-ontario">London, Ontario</a></h3>
 <ul>
