--- a/index.html
+++ b/index.html
@@ -163,6 +163,8 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="apurva-nakade"><a class="header" href="#apurva-nakade">Apurva Nakade</a></h1>
+<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+<script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
 <figure class="right">
     <img src="images/me0.jpg" width="200px"/>
     <figcaption>
@@ -173,10 +175,17 @@
         </a>
     </figcaption>
 </figure>
-<p>I'm a postdoctoral lecturer in the <a href="https://www.math.northwestern.edu/">Math Department</a> at <a href="https://www.northwestern.edu/">Northwestern University</a>. 
-If you're a student or an educator, please feel free to <a href="mailto:apurva.nakade@northwestern.edu">email</a> me.</p>
-<p>In Fall 2021, I'm teaching Math 220-2 (Single-Variable Integral Calculus) and Math 290-1 (MENU: Linear Algebra and Multivariable Calculus).</p>
-
+<p>I'm a postdoctoral lecturer in the <a href="https://www.math.northwestern.edu/">Math Department</a> at Northwestern University. 
+In Fall 2021, I'm teaching <a href="https://canvas.northwestern.edu/courses/152730">Single-Variable Integral Calculus</a> and <a href="https://canvas.northwestern.edu/courses/152713">MENU: Linear Algebra and Multivariable Calculus</a>.</p>
+<table><thead><tr><th></th><th></th></tr></thead><tbody>
+<tr><td>Office:</td><td>Locy 204</td></tr>
+<tr><td>In-person office hours:</td><td>TBA</td></tr>
+<tr><td>Zoom office hours:</td><td>TBA</td></tr>
+<tr><td>Email:</td><td>apurva.nakade@northwestern.edu</td></tr>
+</tbody></table>
+<!-- You can make an appointment between **M-F 2-5pm**, with me on Zoom using the above link. You can see the availablity in the calendar below -->
+<!-- 
+<iframe src="https://calendar.google.com/calendar/embed?height=400&wkst=1&bgcolor=%23ffffff&ctz=America%2FChicago&src=YXB1cnZuYWthZGVAZ21haWwuY29t&src=cXNrZGt2bXZlMGFlb29pOHZnNGhhZ2JrZWtAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&src=anY2ZjU2djRzcThzNHBsdDRocXBkb284YmdAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&src=Y2psZXRjdnA2ZWV1a2M0amk0ZWJjdXBwamtAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&color=%237CB342&color=%239E69AF&color=%23EF6C00&color=%23F6BF26&showTitle=0&showNav=1&showDate=1&showPrint=0&showTabs=0&showCalendars=0&showTz=1&mode=WEEK&title=Availability" style="border-width:0" width="750" height="400" frameborder="0" scrolling="no"></iframe> -->
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
