--- a/resume.html
+++ b/resume.html
@@ -168,8 +168,8 @@
 <a href="https://tinyurl.com/nakade-evals">Teaching Evaluations.</a></p>
 <p>I did my bachelor's in computer science and engineering from Indian Institute of Technology, Kanpur.
 I did a masters in mathematics from Chennai Mathematical Institute followed by Ph.D. in mathematics from Johns Hopkins University.</p>
-<p>Since 2019, I have been a postdoctoral fellow at University of Western Ontario.
-Starting Fall 2021, I'll be a postdoctoral lecturer at Northwestern University.
+<p>I currently a postdoctoral lecturer at Northwestern University.
+Before this, I was a postdoctoral fellow at University of Western Ontario.
 I'm a member of the <a href="https://www.maa.org/programs-and-communities/professional-development/project-next">Project NExT</a> Brown'20 cohort.
 I also a <a href="https://cer.jhu.edu/teaching-academy/coc/overview">certification</a> from the <a href="https://cer.jhu.edu/teaching-academy/">Teaching Academy at JHU</a>.</p>
 <p>I was a mentor for <a href="https://www.mathcamp.org/">Canada/USA Mathcamp</a> from 2017-2019 and an academic coordinator for the summer of 2018.
