--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="index.html" class="active">Apurva Nakade</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="resume.html">Résumé</a></li><li class="chapter-item "><a href="etc.html">Etc.</a></li></ol></li><li class="chapter-item "><a href="course_notes.html">Course Notes</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="mathcamp.html">Mathcamp</a></li><li class="chapter-item "><a href="jhu.html">JHU</a></li><li class="chapter-item "><a href="uwo.html">UWO</a></li></ol></li><li class="chapter-item "><a href="math.html">Math</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="lean.html">Lean</a></li><li class="chapter-item "><a href="research.html">Research</a></li><li class="chapter-item "><a href="expository_notes.html">Expository Notes</a></li></ol></li><li class="chapter-item "><a href="pedagogy.html">Pedagogy</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="drp.html">DRP</a></li><li class="chapter-item "><a href="professional_development.html">Professional Development</a></li><li class="chapter-item "><a href="resources.html">Resources</a></li><li class="spacer"></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="index.html" class="active">Apurva Nakade</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="resume.html">Résumé</a></li><li class="chapter-item "><a href="etc.html">Etc.</a></li></ol></li><li class="chapter-item "><a href="course_notes.html">Course Notes</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="mathcamp.html">Mathcamp</a></li><li class="chapter-item "><a href="jhu.html">JHU</a></li><li class="chapter-item "><a href="uwo.html">UWO</a></li></ol></li><li class="chapter-item "><a href="math.html">Math</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="lean.html">Lean</a></li><li class="chapter-item "><a href="research.html">Research</a></li><li class="chapter-item "><a href="expository_notes.html">Expository Notes</a></li><li class="chapter-item "><a href="textbooks.html">Textbooks</a></li></ol></li><li class="chapter-item "><a href="professional_development.html">Professional Development</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="drp.html">DRP</a></li><li class="chapter-item "><a href="canada_usa_mathcamp.html">Mathcamp</a></li><li class="chapter-item "><a href="teaching_academy_jhu.html">Teaching Academy, JHU</a></li><li class="chapter-item "><a href="project_next.html">Project NExT</a></li><li class="spacer"></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -176,13 +176,12 @@
     </figcaption>
 </figure>
 <p>I'm a postdoctoral lecturer in the <a href="https://www.math.northwestern.edu/">Math Department</a> at Northwestern University. 
-In Fall 2021, I'm teaching <a href="https://canvas.northwestern.edu/courses/152730">Single-Variable Integral Calculus</a> and <a href="https://canvas.northwestern.edu/courses/152713">MENU: Linear Algebra and Multivariable Calculus</a>.</p>
-<table><thead><tr><th></th><th></th></tr></thead><tbody>
-<tr><td>Office:</td><td>Locy 204</td></tr>
-<tr><td>In-person office hours:</td><td>TBA</td></tr>
-<tr><td>Zoom office hours:</td><td>TBA</td></tr>
-<tr><td>Email:</td><td>apurva.nakade@northwestern.edu</td></tr>
-</tbody></table>
+In Fall 2021, I'm teaching <a href="https://canvas.northwestern.edu/courses/152729">Math 220-1</a> and <a href="https://canvas.northwestern.edu/courses/152713">Math 290-1</a>.</p>
+<p><strong>Office:</strong> Locy 204 <br/>
+<strong>Email:</strong> apurva.nakade@northwestern.edu</p>
+<p><strong>Math 290-1 Lectures:</strong>  MWF 12 - 1 in Tech Building, LG66 <br/>
+<strong>Math 220-1 Lectures:</strong>  MWF 1 - 2 in Frances Searle Building, 2407</p>
+<p><strong>Office hours:</strong> TBD</p>
 <!-- You can make an appointment between **M-F 2-5pm**, with me on Zoom using the above link. You can see the availablity in the calendar below -->
 <!-- 
 <iframe src="https://calendar.google.com/calendar/embed?height=400&wkst=1&bgcolor=%23ffffff&ctz=America%2FChicago&src=YXB1cnZuYWthZGVAZ21haWwuY29t&src=cXNrZGt2bXZlMGFlb29pOHZnNGhhZ2JrZWtAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&src=anY2ZjU2djRzcThzNHBsdDRocXBkb284YmdAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&src=Y2psZXRjdnA2ZWV1a2M0amk0ZWJjdXBwamtAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&color=%237CB342&color=%239E69AF&color=%23EF6C00&color=%23F6BF26&showTitle=0&showNav=1&showDate=1&showPrint=0&showTabs=0&showCalendars=0&showTz=1&mode=WEEK&title=Availability" style="border-width:0" width="750" height="400" frameborder="0" scrolling="no"></iframe> -->
