--- a/index.html
+++ b/index.html
@@ -177,11 +177,12 @@
 </figure>
 <p>I'm a postdoctoral lecturer in the <a href="https://www.math.northwestern.edu/">Math Department</a> at Northwestern University. 
 In Fall 2021, I'm teaching <a href="https://canvas.northwestern.edu/courses/152729">Math 220-1</a> and <a href="https://canvas.northwestern.edu/courses/152713">Math 290-1</a>.</p>
-<p><strong>Office:</strong> Locy 204 <br/>
-<strong>Email:</strong> apurva.nakade@northwestern.edu</p>
-<p><strong>Math 290-1 Lectures:</strong>  MWF 12 - 1 in Tech Building, LG66 <br/>
-<strong>Math 220-1 Lectures:</strong>  MWF 1 - 2 in Frances Searle Building, 2407</p>
-<p><strong>Office hours:</strong> TBD</p>
+<table><thead><tr><th></th><th></th></tr></thead><tbody>
+<tr><td><strong>Email:</strong></td><td><a href="mailto:apurva.nakade@northwestern.edu">apurva.nakade@northwestern.edu</a></td></tr>
+<tr><td><strong>Office:</strong></td><td>Locy 204</td></tr>
+<tr><td><strong>Office hours:</strong></td><td>MW 3:30 - 4:30 pm</td></tr>
+<tr><td><strong>Zoom office hours:</strong></td><td>T 2:30 - 4:30 pm (link on Canvas)</td></tr>
+</tbody></table>
 <!-- You can make an appointment between **M-F 2-5pm**, with me on Zoom using the above link. You can see the availablity in the calendar below -->
 <!-- 
 <iframe src="https://calendar.google.com/calendar/embed?height=400&wkst=1&bgcolor=%23ffffff&ctz=America%2FChicago&src=YXB1cnZuYWthZGVAZ21haWwuY29t&src=cXNrZGt2bXZlMGFlb29pOHZnNGhhZ2JrZWtAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&src=anY2ZjU2djRzcThzNHBsdDRocXBkb284YmdAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&src=Y2psZXRjdnA2ZWV1a2M0amk0ZWJjdXBwamtAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&color=%237CB342&color=%239E69AF&color=%23EF6C00&color=%23F6BF26&showTitle=0&showNav=1&showDate=1&showPrint=0&showTabs=0&showCalendars=0&showTz=1&mode=WEEK&title=Availability" style="border-width:0" width="750" height="400" frameborder="0" scrolling="no"></iframe> -->
