update office hours

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ In Fall 2021, I'm teaching <a href="https://canvas.northwestern.edu/courses/1527
 <table><thead><tr><th></th><th></th></tr></thead><tbody>
 <tr><td><strong>Email:</strong></td><td><a href="mailto:apurva.nakade@northwestern.edu">apurva.nakade@northwestern.edu</a></td></tr>
 <tr><td><strong>Office:</strong></td><td>Locy 204</td></tr>
-<tr><td><strong>Office hours:</strong></td><td>MW 3:00 - 4:00 pm</td></tr>
+<tr><td><strong>Office hours:</strong></td><td>MW 3:00 - 4:30 pm + <a href="mailto:apurva.nakade@northwestern.edu">by appointment</a></td></tr>
 <tr><td><strong>Zoom office hours:</strong></td><td>T 2:30 - 4:30 pm (link on Canvas)</td></tr>
 </tbody></table>
 
