fix prof dev page

--- a/professional_development.html
+++ b/professional_development.html
@@ -172,7 +172,13 @@
     and not as it should be!
 </figcaption>
 </figure>
-<p>Following are some programs that have helped me greatly on my journey of becoming a math educator.</p>
+<p>Following are some programs that have helped me greatly on my journey of becoming a math educator:</p>
+<ul>
+<li><a href="drp.html">Directed Reading Program</a></li>
+<li><a href="canada_usa_mathcamp.html">Canada/USA Mathcamp</a></li>
+<li><a href="teaching_academy_jhu.html">Teaching Academy, JHU</a></li>
+<li><a href="project_next.html">Project NExT, MAA</a></li>
+</ul>
 
                     </main>
 
