--- a/textbooks.html
+++ b/textbooks.html
@@ -164,6 +164,14 @@
                     <main>
                         <h1 id="textbooks"><a class="header" href="#textbooks">Textbooks</a></h1>
 <p>This page is under construction. I intend to post useful links here about only math resources.</p>
+<h2 id="data-sciencemathcs"><a class="header" href="#data-sciencemathcs">Data Science/Math/CS</a></h2>
+<ul>
+<li><a href="https://canvas.instructure.com/courses/1675202">Modeling &amp; Simulation - Fall 2019</a></li>
+<li><a href="https://greenteapress.com/wp/think-python-2e/">Think Python 2e</a></li>
+<li><a href="https://mlc.tamu.edu/Supplemental-Material/Python-mini-course">Python Instructional Video Series</a></li>
+<li><a href="http://matrix.skku.ac.kr/Cal-Book/">Calculus with Sage</a></li>
+<li><a href="http://users.rowan.edu/%7Enguyen/sage/SageMathAdviceforCalculus.pdf">SageMath Advice For Calculus</a></li>
+</ul>
 <h2 id="open-source-textbooks"><a class="header" href="#open-source-textbooks">Open-Source Textbooks</a></h2>
 <!-- - [linear algebra resources] -->
 <ul>
@@ -179,12 +187,12 @@
 <li><a href="https://activecalculus.org/">Active Calculus Textbooks</a></li>
 </ul>
 <h2 id="open-source-math-software"><a class="header" href="#open-source-math-software">Open-Source Math Software</a></h2>
-<ol>
+<ul>
 <li><a href="https://www.sagemath.org/">Sage Math</a></li>
 <li><a href="https://github.com/ManimCommunity/manim#readme">Manim</a></li>
 <li><a href="https://asymptote.sourceforge.io/">Asymptote</a></li>
 <li><a href="https://ipesek.github.io/jsxgraphbook/1_introduction.html">JSXGraph</a></li>
-</ol>
+</ul>
 
                     </main>
 
