--- a/resume.html
+++ b/resume.html
@@ -166,29 +166,31 @@
 <p><a href="https://github.com/apurvnakade/PDFs/blob/main/CV.pdf">CV.</a>
  
 <a href="https://tinyurl.com/nakade-evals">Teaching Evaluations.</a></p>
-<p>I did my bachelor's in computer science and engineering from Indian Institute of Technology, Kanpur.
+<p>I got my bachelor's in computer science and engineering from Indian Institute of Technology, Kanpur.
 I did a masters in mathematics from Chennai Mathematical Institute followed by Ph.D. in mathematics from Johns Hopkins University.</p>
-<p>I currently a postdoctoral lecturer at Northwestern University.
+<p>I'm currently a postdoctoral lecturer at Northwestern University.
 Before this, I was a postdoctoral fellow at University of Western Ontario.
 I'm a member of the <a href="https://www.maa.org/programs-and-communities/professional-development/project-next">Project NExT</a> Brown'20 cohort.
-I also a <a href="https://cer.jhu.edu/teaching-academy/coc/overview">certification</a> from the <a href="https://cer.jhu.edu/teaching-academy/">Teaching Academy at JHU</a>.</p>
+I also have a <a href="https://cer.jhu.edu/teaching-academy/coc/overview">certification</a> from the <a href="https://cer.jhu.edu/teaching-academy/">Teaching Academy at JHU</a>.</p>
 <p>I was a mentor for <a href="https://www.mathcamp.org/">Canada/USA Mathcamp</a> from 2017-2019 and an academic coordinator for the summer of 2018.
 Below is a complete list of courses I've taught so far.</p>
 <table><thead><tr><th>University</th><th>Course</th><th>Years</th><th># of students</th><th></th></tr></thead><tbody>
+<tr><td>Northwestern</td><td>Single Variable Calculus <br> (Math 220-1)</td><td>Fall 2021</td><td>25</td><td>First year</td></tr>
+<tr><td></td><td>Honors Linear Algebra <br> (Math 290-1)</td><td>fall 2021</td><td>45</td><td>First/second year</td></tr>
 <tr><td>UWO</td><td>Algebraic Topology</td><td>Winter 2021</td><td>10</td><td>Grad</td></tr>
-<tr><td></td><td>Discrete Structures for Engineering</td><td>Fall 2020</td><td>198</td><td>First year undergrad</td></tr>
-<tr><td></td><td>Calculus II for Mathematical and Physical Sciences</td><td>Winter 2020</td><td>150</td><td>First year undergrad</td></tr>
-<tr><td></td><td>Calculus I for Mathematical and Physical Sciences</td><td>Fall 2019</td><td>176</td><td>First year undergrad</td></tr>
+<tr><td></td><td>Discrete Structures for Engineering</td><td>Fall 2020</td><td>198</td><td>First year</td></tr>
+<tr><td></td><td>Calculus II for Mathematical and Physical Sciences</td><td>Winter 2020</td><td>150</td><td>First year</td></tr>
+<tr><td></td><td>Calculus I for Mathematical and Physical Sciences</td><td>Fall 2019</td><td>176</td><td>First year</td></tr>
 <tr><td></td><td>Topics in Category Theory</td><td>Fall 2019</td><td>3</td><td>Grad</td></tr>
-<tr><td>JHU</td><td>Symmetries &amp; Polynomials</td><td>Intersession 2018</td><td>15</td><td>All years undergrad</td></tr>
-<tr><td></td><td>Honors Single Variable Calculus</td><td>Spring 2017, 18</td><td>7</td><td>First year undergrad</td></tr>
-<tr><td></td><td>Hitchhiker’s Guide to Algebraic Topology</td><td>Intersession 2017</td><td>11</td><td>All years undergrad</td></tr>
-<tr><td></td><td>Calculus II (For Biology and Social Science)</td><td>Summer 2016</td><td>5</td><td>First year undergrad</td></tr>
-<tr><td></td><td>Differential Equations with Applications</td><td>Summer 2015, 17</td><td>11</td><td>First year undergrad</td></tr>
-<tr><td></td><td>Online Linear Algebra</td><td>Summer 2014</td><td>34</td><td>All years undergrad</td></tr>
-<tr><td>Mathcamp</td><td>Several</td><td>Summers 2017-20</td><td>-</td><td>High school &amp; middle school</td></tr>
+<tr><td>JHU</td><td>Symmetries &amp; Polynomials</td><td>Intersession 2018</td><td>15</td><td>All years</td></tr>
+<tr><td></td><td>Honors Single Variable Calculus</td><td>Spring 2017, 18</td><td>7</td><td>First year</td></tr>
+<tr><td></td><td>Hitchhiker’s Guide to Algebraic Topology</td><td>Intersession 2017</td><td>11</td><td>All years</td></tr>
+<tr><td></td><td>Calculus II (For Biology and Social Science)</td><td>Summer 2016</td><td>5</td><td>First year</td></tr>
+<tr><td></td><td>Differential Equations with Applications</td><td>Summer 2015, 17</td><td>11</td><td>First year</td></tr>
+<tr><td></td><td>Online Linear Algebra</td><td>Summer 2014</td><td>34</td><td>All years</td></tr>
+<tr><td>Mathcamp</td><td>Several</td><td>Summers 2017-20</td><td>-</td><td>High school</td></tr>
 </tbody></table>
-<p>Course websites: <a href="https://github.com/apurvnakade/PDFs/tree/main/course%20notes/2019Calc1000A">Calc '19</a>, <a href="https://github.com/apurvnakade/PDFs/tree/main/course%20notes/2017DiffEq">DiffEq '17</a>, <a href="https://github.com/apurvnakade/PDFs/tree/main/course%20notes/2017DiffEq">Calc '16</a>, <a href="https://github.com/apurvnakade/PDFs/tree/main/course%20notes/2015DiffEq">DiffEq '15</a>.</p>
+<p>Course materials: <a href="https://github.com/apurvnakade/PDFs/tree/main/course%20notes/2019Calc1000A">Calc '19</a>, <a href="https://github.com/apurvnakade/PDFs/tree/main/course%20notes/2017DiffEq">DiffEq '17</a>, <a href="https://github.com/apurvnakade/PDFs/tree/main/course%20notes/2017DiffEq">Calc '16</a>, <a href="https://github.com/apurvnakade/PDFs/tree/main/course%20notes/2015DiffEq">DiffEq '15</a>.</p>
 
                     </main>
 
